clean up & added folder

--- a/content.tex
+++ b/content.tex
@@ -1,5 +1,5 @@
 \section{Basic}
-\inputcode{test}{default.cpp}
+\lstinputlisting[language=bash]{Misc/test.sh}
 %\subsection{Shell script}
 %\lstinputlisting{1_Basic/Shell_script.cpp}
 %\subsection{Default code}
