Added BigInt & CRT/EXGCD

--- a/content.tex
+++ b/content.tex
@@ -1,5 +1,41 @@
 \section{Basic}
+\inputcode{Default}{Misc/default.cpp}
+\lstinputlisting[language=bash]{Misc/commands.sh}
 \lstinputlisting[language=bash]{Misc/test.sh}
+\section{Geometry}
+\inputcode{Template}{Geometry/GeometryTemplate.cpp}
+\inputcode{Minkowski}{Geometry/MinkowskiSum.cpp}
+\section{Graph}
+\inputcode{Block Cut}{Graph/VertexBCC.cpp}
+\inputcode{Centroid Decomp}{Graph/CentroidDecomposition.cpp}
+\inputcode{Dominater Tree}{Graph/DominaterTree.cpp}
+\inputcode{Matching}{Graph/GeneralMatching.cpp}
+\inputcode{Max Clique}{Graph/MaxClique.cpp}
+\inputcode{Max Flow}{Graph/MaxFlow.cpp}
+\section{Math}
+\inputcode{Mod Int}{Math/ModInt.cpp}
+\inputcode{Fraction}{Math/Fraction.cpp}
+\inputcode{FFT}{Math/FFT.cpp}
+\inputcode{Miller Rabin}{Math/MillerRabin.cpp}
+\inputcode{Pollard's Rho}{Math/PollardRho.cpp}
+\inputcode{FWT}{Math/FastWalshTransform.cpp}
+\section{String}
+\inputcode{AC auto}{String/ACautomaton.cpp}
+\inputcode{SA}{String/SuffixArray.cpp}
+\inputcode{KMP}{String/Kmp.cpp}
+\inputcode{Z}{String/ZAlgorithm.cpp}
+\inputcode{Manacher}{String/Manacher.cpp}
+\section{Data Sructure}
+\inputcode{Li-Chao}{DataStructure/LiChaoMin.cpp}
+\inputcode{Treap}{DataStructure/Treap.cpp}
+\inputcode{Ultimate Segment Tree}{DataStructure/SegmentTreeBeat.cpp}
+
+
+
+
+
+
+
 %\subsection{Shell script}
 %\lstinputlisting{1_Basic/Shell_script.cpp}
 %\subsection{Default code}
