added theorem , gomory-hu and stuff

--- a/content.tex
+++ b/content.tex
@@ -2,23 +2,39 @@
 \inputcode{Default}{Misc/default.cpp}
 \lstinputlisting[language=bash]{Misc/commands.sh}
 \lstinputlisting[language=bash]{Misc/test.sh}
+\inputcode{Pragma}{Misc/Pragma.cpp}
+\inputcode{FastIO}{Misc/FastIO.cpp}
 \section{Geometry}
-\inputcode{Template}{Geometry/GeometryTemplate.cpp}
+\inputcode{Point}{Geometry/Point.cpp}
+\inputcode{Polar Angle Vector}{Geometry/PolarAngleVector.cpp}
+\inputcode{Polar Angle Sort}{Geometry/PolarAngleSort.cpp}
+\inputcode{Intersectsion}{Geometry/Intersects.cpp}
+\inputcode{Convex Hull}{Geometry/FindConvexHull.cpp}
+\inputcode{In Convex Hull}{Geometry/InConvexHull.cpp}
+\inputcode{Rotation Sweep Line}{Geometry/RotationSweepLine.cpp}
 \inputcode{Minkowski}{Geometry/MinkowskiSum.cpp}
+\inputcode{Minimum Enclosing Circle}{Geometry/EnclosingCircle.cpp}
 \section{Graph}
-\inputcode{Block Cut}{Graph/VertexBCC.cpp}
+\inputcode{Block Cut}{Graph/BlockCutTree.cpp}
 \inputcode{Centroid Decomp}{Graph/CentroidDecomposition.cpp}
 \inputcode{Dominater Tree}{Graph/DominaterTree.cpp}
 \inputcode{Matching}{Graph/GeneralMatching.cpp}
 \inputcode{Max Clique}{Graph/MaxClique.cpp}
 \inputcode{Max Flow}{Graph/MaxFlow.cpp}
+\inputcode{MCMF}{Graph/MaxFlowMinCost.cpp}
+\inputcode{Gomory-Hu Tree}{Graph/GomoryHu.cpp}
 \section{Math}
 \inputcode{Mod Int}{Math/ModInt.cpp}
 \inputcode{Fraction}{Math/Fraction.cpp}
 \inputcode{FFT}{Math/FFT.cpp}
+\inputcode{NTT}{Math/NTT.cpp}
+\inputcode{Big Interger}{Math/BigInt.cpp}
+\inputcode{Exgcd/CRT}{Math/Exgcd.cpp}
 \inputcode{Miller Rabin}{Math/MillerRabin.cpp}
 \inputcode{Pollard's Rho}{Math/PollardRho.cpp}
 \inputcode{FWT}{Math/FastWalshTransform.cpp}
+\subsection{Theorem}
+\input{Math/Theorem.tex}
 \section{String}
 \inputcode{AC auto}{String/ACautomaton.cpp}
 \inputcode{SA}{String/SuffixArray.cpp}
@@ -28,9 +44,11 @@
 \section{Data Sructure}
 \inputcode{Li-Chao}{DataStructure/LiChaoMin.cpp}
 \inputcode{Treap}{DataStructure/Treap.cpp}
+\inputcode{Link Cut Tree}{DataStructure/LinkCutTree.cpp}
 \inputcode{Ultimate Segment Tree}{DataStructure/SegmentTreeBeat.cpp}
-
-
+\section{Misc}
+\inputcode{Total Binary Search}{Misc/TotalBinarySearch.cpp}
+\inputcode{CDQ}{Misc/CDQ.cpp}
 
 
 
