--- a/content.tex
+++ b/content.tex
@@ -1,51 +1,78 @@
 \section{Basic}
+\lstinputlisting[language=bash]{Misc/.vimrc}
 \inputcode{Default}{Misc/default.cpp}
 \lstinputlisting[language=bash]{Misc/commands.sh}
 \lstinputlisting[language=bash]{Misc/test.sh}
 \inputcode{Pragma}{Misc/Pragma.cpp}
 \inputcode{FastIO}{Misc/FastIO.cpp}
+
 \section{Geometry}
-\inputcode{Point}{Geometry/Point.cpp}
-\inputcode{Polar Angle Vector}{Geometry/PolarAngleVector.cpp}
-\inputcode{Polar Angle Sort}{Geometry/PolarAngleSort.cpp}
-\inputcode{Intersectsion}{Geometry/Intersects.cpp}
-\inputcode{Convex Hull}{Geometry/FindConvexHull.cpp}
-\inputcode{In Convex Hull}{Geometry/InConvexHull.cpp}
-\inputcode{Rotation Sweep Line}{Geometry/RotationSweepLine.cpp}
-\inputcode{Minkowski}{Geometry/MinkowskiSum.cpp}
 \inputcode{Minimum Enclosing Circle}{Geometry/EnclosingCircle.cpp}
+\inputcode{Convex Hull}{Geometry/FindConvexHull.cpp}
+\inputcode{Polar Angle Vector}{Geometry/PolarAngleVector.cpp}
+\inputcode{In Convex Hull}{Geometry/InConvexHull.cpp}
+\inputcode{Intersectsion}{Geometry/Intersects.cpp}
+\inputcode{Minkowski}{Geometry/MinkowskiSum.cpp}
+\inputcode{Point}{Geometry/Point.cpp}
+\inputcode{Polar Angle Sort}{Geometry/PolarAngleSort.cpp}
+\inputcode{Rotation Sweep Line}{Geometry/RotationSweepLine.cpp}
+
 \section{Graph}
 \inputcode{Block Cut}{Graph/BlockCutTree.cpp}
+\inputcode{Vertex BCC}{Graph/VertexBCC.cpp}
+\inputcode{Edge BCC}{Graph/EdgeBCC.cpp}
 \inputcode{Centroid Decomp}{Graph/CentroidDecomposition.cpp}
-\inputcode{Dominater Tree}{Graph/DominaterTree.cpp}
+\inputcode{C3}{Graph/CountC3.cpp}
+\inputcode{C4}{Graph/CountC4.cpp}
+\inputcode{Directed MST}{Graph/DirectedMST.cpp}
+\inputcode{Dominator Tree}{Graph/DominatorTree.cpp}
+\inputcode{Eulerian Path}{Graph/EulerianPath.cpp}
+\inputcode{Gomory-Hu Tree}{Graph/GomoryHu.cpp}
+\inputcode{HVL Decomp}{Graph/HeavyLightDecomposition.cpp}
+\inputcode{Hopcroft-Karp}{Graph/Hopcroft-karp.cpp}
+\inputcode{KM}{Graph/KM.cpp}
 \inputcode{Matching}{Graph/GeneralMatching.cpp}
 \inputcode{Max Clique}{Graph/MaxClique.cpp}
 \inputcode{Max Flow}{Graph/MaxFlow.cpp}
 \inputcode{MCMF}{Graph/MaxFlowMinCost.cpp}
-\inputcode{Gomory-Hu Tree}{Graph/GomoryHu.cpp}
+\inputcode{SCC}{Graph/SCC.cpp}
+\inputcode{SPFA}{Graph/SPFA.cpp}
+\inputcode{2-SAT}{Graph/TwoSAT.cpp}
 \section{Math}
+\inputcode{Big Interger}{Math/BigInt.cpp}
 \inputcode{Mod Int}{Math/ModInt.cpp}
 \inputcode{Fraction}{Math/Fraction.cpp}
+
+\inputcode{FWT}{Math/FastWalshTransform.cpp}
 \inputcode{FFT}{Math/FFT.cpp}
 \inputcode{NTT}{Math/NTT.cpp}
-\inputcode{Big Interger}{Math/BigInt.cpp}
-\inputcode{Exgcd/CRT}{Math/Exgcd.cpp}
+\inputcode{Polynomial}{Math/Polynomial.cpp}
+
+
 \inputcode{Miller Rabin}{Math/MillerRabin.cpp}
 \inputcode{Pollard's Rho}{Math/PollardRho.cpp}
-\inputcode{FWT}{Math/FastWalshTransform.cpp}
+\inputcode{Discrete Log}{Math/DiscreteLog.cpp}
+
+\inputcode{Exgcd/CRT}{Math/Exgcd.cpp}
+\inputcode{Semi-Euclid}{Math/SuperEuclid.cpp}
+
 \subsection{Theorem}
 \input{Math/Theorem.tex}
+
 \section{String}
 \inputcode{AC auto}{String/ACautomaton.cpp}
 \inputcode{SA}{String/SuffixArray.cpp}
 \inputcode{KMP}{String/Kmp.cpp}
 \inputcode{Z}{String/ZAlgorithm.cpp}
 \inputcode{Manacher}{String/Manacher.cpp}
+\inputcode{SAM}{String/SAM.cpp}
+
 \section{Data Sructure}
 \inputcode{Li-Chao}{DataStructure/LiChaoMin.cpp}
-\inputcode{Treap}{DataStructure/Treap.cpp}
+\inputcode{Treap}{DataStructure/PerfectTreap.cpp}
 \inputcode{Link Cut Tree}{DataStructure/LinkCutTree.cpp}
 \inputcode{Ultimate Segment Tree}{DataStructure/SegmentTreeBeat.cpp}
+
 \section{Misc}
 \inputcode{Total Binary Search}{Misc/TotalBinarySearch.cpp}
 \inputcode{CDQ}{Misc/CDQ.cpp}
