--- a/content.tex
+++ b/content.tex
@@ -3,21 +3,24 @@
 \inputcode{Default}{Misc/default.cpp}
 \lstinputlisting[language=bash]{Misc/commands.sh}
 \lstinputlisting[language=bash]{Misc/test.sh}
+\inputcode{Default-extension}{Misc/extend.cpp}
 \inputcode{Pragma}{Misc/Pragma.cpp}
 \inputcode{FastIO}{Misc/FastIO.cpp}
 
 \section{Geometry}
+\inputcode{Template}{Geometry/GeometryTemplate.cpp}
 \inputcode{Minimum Enclosing Circle}{Geometry/EnclosingCircle.cpp}
 \inputcode{Convex Hull}{Geometry/FindConvexHull.cpp}
 \inputcode{Polar Angle Vector}{Geometry/PolarAngleVector.cpp}
 \inputcode{In Convex Hull}{Geometry/InConvexHull.cpp}
 \inputcode{Intersectsion}{Geometry/Intersects.cpp}
 \inputcode{Minkowski}{Geometry/MinkowskiSum.cpp}
-\inputcode{Point}{Geometry/Point.cpp}
 \inputcode{Polar Angle Sort}{Geometry/PolarAngleSort.cpp}
 \inputcode{Rotation Sweep Line}{Geometry/RotationSweepLine.cpp}
+\inputcode{Half Plain Intersection}{Geometry/HalfPlaneIntersect.cpp}
 
 \section{Graph}
+\inputcode{BellmonFord}{Graph/BellmonFord.cpp}
 \inputcode{Block Cut}{Graph/BlockCutTree.cpp}
 \inputcode{Vertex BCC}{Graph/VertexBCC.cpp}
 \inputcode{Edge BCC}{Graph/EdgeBCC.cpp}
@@ -34,7 +37,9 @@
 \inputcode{Matching}{Graph/GeneralMatching.cpp}
 \inputcode{Max Clique}{Graph/MaxClique.cpp}
 \inputcode{Max Flow}{Graph/MaxFlow.cpp}
+\inputcode{Flow With Demand}{Graph/FlowWithDemand.cpp}
 \inputcode{MCMF}{Graph/MaxFlowMinCost.cpp}
+\inputcode{MCMF With Demand}{Graph/MCMFWithDemand.cpp}
 \inputcode{SCC}{Graph/SCC.cpp}
 \inputcode{SPFA}{Graph/SPFA.cpp}
 \inputcode{2-SAT}{Graph/TwoSAT.cpp}
@@ -47,6 +52,7 @@
 \inputcode{FFT}{Math/FFT.cpp}
 \inputcode{NTT}{Math/NTT.cpp}
 \inputcode{Polynomial}{Math/Polynomial.cpp}
+\inputcode{Bit Conv}{Math/GeneralBitConv.cpp}
 
 
 \inputcode{Miller Rabin}{Math/MillerRabin.cpp}
@@ -55,6 +61,10 @@
 
 \inputcode{Exgcd/CRT}{Math/Exgcd.cpp}
 \inputcode{Semi-Euclid}{Math/SuperEuclid.cpp}
+
+\subsection{LP}
+\input{Math/Simplex.tex}
+\inputcode{Simplex}{Math/Simplex.cpp}
 
 \subsection{Theorem}
 \input{Math/Theorem.tex}
@@ -66,6 +76,7 @@
 \inputcode{Z}{String/ZAlgorithm.cpp}
 \inputcode{Manacher}{String/Manacher.cpp}
 \inputcode{SAM}{String/SAM.cpp}
+\inputcode{exSAM}{String/exSAM.cpp}
 
 \section{Data Sructure}
 \inputcode{Li-Chao}{DataStructure/LiChaoMin.cpp}
