update, fix structure

--- a/content.tex
+++ b/content.tex
@@ -7,6 +7,7 @@
 \inputcode{Pragma}{Misc/Pragma.cpp}
 \inputcode{FastIO}{Misc/FastIO.cpp}
 
+
 \section{Geometry}
 \inputcode{Template}{Geometry/GeometryTemplate.cpp}
 \inputcode{Minimum Enclosing Circle}{Geometry/EnclosingCircle.cpp}
@@ -17,7 +18,9 @@
 \inputcode{Minkowski}{Geometry/MinkowskiSum.cpp}
 \inputcode{Polar Angle Sort}{Geometry/PolarAngleSort.cpp}
 \inputcode{Rotation Sweep Line}{Geometry/RotationSweepLine.cpp}
-\inputcode{Half Plain Intersection}{Geometry/HalfPlaneIntersect.cpp}
+\inputcode{Half Plane Intersection}{Geometry/HalfPlaneIntersect.cpp}
+\inputcode{Insection Line-Convex}{Geometry/IntersectionLineConvex.cpp}
+\inputcode{Tagent ConvexHull}{Geometry/TangentPointToHull.cpp}
 
 \section{Graph}
 \inputcode{BellmonFord}{Graph/BellmonFord.cpp}
@@ -86,6 +89,7 @@
 
 \section{Misc}
 \inputcode{Total Binary Search}{Misc/TotalBinarySearch.cpp}
+\inputcode{Cyclic Taranry Search}{Misc/cyc_tsearch.cpp}
 \inputcode{CDQ}{Misc/CDQ.cpp}
 
 
