--- a/content.tex
+++ b/content.tex
@@ -65,6 +65,12 @@
 \inputcode{Exgcd/CRT}{Math/Exgcd.cpp}
 \inputcode{Semi-Euclid}{Math/SuperEuclid.cpp}
 
+\inputcode{Determinant}{Math/Determinant.cpp}
+\inputcode{Gauss-Jordan}{Math/GaussElim.cpp}
+\inputcode{MatrixInverse}{Math/Inverse.cpp}
+\inputcode{Linear system}{Math/LinearSys.cpp}
+\inputcode{Rank}{Math/Rank.cpp}
+
 \subsection{LP}
 \input{Math/Simplex.tex}
 \inputcode{Simplex}{Math/Simplex.cpp}
